[gd_scene load_steps=5 format=3 uid="uid://cvrbocje8jqj7"]

[ext_resource type="Script" path="res://Scenes/Misc/laser.gd" id="1_vk2px"]
[ext_resource type="Texture2D" uid="uid://btwhl5a57yb50" path="res://Images/Obstacles/LaserBeam.png.png" id="2_goywp"]
[ext_resource type="Texture2D" uid="uid://dvae23fksoaxn" path="res://Images/Obstacles/LaserHead.png.png" id="3_h4tga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wwsq"]
size = Vector2(92.5, 32)

[node name="Laser" type="Node2D"]
script = ExtResource("1_vk2px")

[node name="laser_beam" type="Sprite2D" parent="."]
position = Vector2(-0.999969, 1)
rotation = 6.28319
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_goywp")

[node name="head1" type="Sprite2D" parent="."]
position = Vector2(-32, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_h4tga")

[node name="head2" type="Sprite2D" parent="."]
position = Vector2(29, 1)
rotation = 3.14159
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_h4tga")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.25, 1)
shape = SubResource("RectangleShape2D_5wwsq")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
